# ai-bootcamp-rag-to-agents

./: .gitignore  README.md  env-test.ipynb  module1-lesson5-rag.ipynb  pyproject.toml
week1/: gihub.py  homework.ipynb
week1-classwork/: env-test.ipynb  homework.ipynb  module1-lesson5-rag.ipynb  module1-lesson7-vector-search.ipynb  module2-lesson10-documentation-assistant.ipynb  module2-lesson8-structured-output-yt-videos.ipynb  module2-lesson9-chunking-yt-transcripts.ipynb
week2-classwork/: module2-lesson2-agentic-rag.ipynb  module2-lesson3-more-functions-to-agent.ipynb
