[project]
name = "ai-bootcamp-rag-to-agents"
version = "0.1.0"
description = "AI Agent Bootcamp RAG to Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai>=2.2.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.1",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.2.3",
]
